<!--
  Copyright 2011 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    
	<com.seenmovies.DashboardLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	
	    <Button android:id="@+id/home_btn_search"
	        android:text="@string/search_movies"
	        android:drawableTop="@drawable/folder_search"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" />
	        
	    <Button android:id="@+id/home_btn_my_movies"
	        android:text="@string/my_movies"
	        android:drawableTop="@drawable/folder_movie" 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"/>
	        
	    <Button android:id="@+id/home_btn_settings"
	        android:text="@string/general_settings"
	        android:drawableTop="@drawable/folder_app" 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"/>
	        
	    <Button android:id="@+id/home_btn_about"
	        android:text="@string/about"
	        android:drawableTop="@drawable/folder_doc" 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"/>
	</com.seenmovies.DashboardLayout>
</LinearLayout>