<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFFFFF">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#FFFFFF">
		<ImageButton
			android:id="@+id/movie_poster"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#A6CAF0"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="5dp"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingRight="5dp"
			android:paddingLeft="5dp"
			/>
		<TextView
			android:id="@+id/movie_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20dp"
			android:layout_marginTop="10dp"/>
		<TextView
			android:id="@+id/released_date"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20dp"/>
		<TextView
			android:id="@+id/movie_rating"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20dp"/>	
		<TextView
			android:id="@+id/overview"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="16dp"/>
		<TextView
			android:paddingTop="5dp"
			android:id="@+id/movie_already_registered"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/movie_already_registered"
			android:visibility="gone"
			android:textSize="20dp"
			android:layout_marginTop="5dp" />
		<Button
	    	android:id="@+id/i_ve_seen_this_movie_button"
	    	android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:text="@string/i_ve_seen_this_movie"
	  		android:visibility="gone"
	  		android:layout_marginTop="5dp"/>
	  	<Button
	    	android:id="@+id/remove_movie_from_my_list"
	    	android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:text="@string/remove_movie_from_my_list"
	  		android:visibility="gone"
	  		android:layout_marginTop="5dp"/>
	</LinearLayout>
</ScrollView>
